--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@tippyjs/react": "^4.2.6",
+        "axios": "^1.7.2",
         "classnames": "^2.5.1",
         "css-reset-and-normalize": "^2.3.6",
         "react": "^18.3.1",
